<resources>
    <string name="id_fmt">User ID: %s</string>
    <string name="email_fmt">Email: %s</string>
    <string name="createAccount">Создать аккаунт</string>
    <string name="signIn">Вход</string>
    <string name="title_activity_maps">Map</string>
    <string name="app_name">EcoHelp</string>
    <string name="map">Пункты сдачи</string>
    <string name="about">Как работает?</string>
    <string name="signOut">Выход</string>
    <string name="qr">Сканер QR кода</string>
    <string name="scan_process_label">Scanning…</string>
    <string name="scan_label">Scan</string>
    <string name="scan_result_label">Last scan result: </string>
    <string name="library">Библиотека</string>
    <string name="password">Password</string>
    <string name="email">E-mail</string>
    <string name="sinInwithEmail">Вход через почту</string>
    <string name="Create">Регистрация</string>
    <string name="google">Вход через Google</string>
    <string name="inputLogin">Введите логин</string>
    <string name="inputEmail">Введите Email</string>
    <string name="inputPassword">Введите пароль</string>
    <string name="repeatPassword">Повторите пароль</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="inputNickname">Введите ваш никнейм</string>
    <string name="title_activity_shop">ShopActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="p500">-500 рублей пятерочка</string>
    <string name="p300">-300 рублей пятерочка</string>
    <string name="p200">-100 рублей пятерочка</string>
    <string name="l100">-100 рублей лента</string>
    <string name="l300">-300 рублей лента</string>
    <string name="l500">-500 рублей лента</string>
    <string name="title_activity_test">Test</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="coupons1">Купоны</string>
    <string name="shop">Магазин</string>
    <string name="scaner">Сканер</string>
    <string name="inputlogin">Введите ваш будущий логин</string>
    <string name="title_activity_fef">fef</string>
    <string name="achievment">Достижения</string>
    <string name="settings">Настройки</string>
    <string name="EXIT">Выход</string>
    <string name="defaultAvatar">Вернуть обычную аватарку</string>
    <string name="changeAvatar">Смена аватара</string>
    <string name="showBarcode">  Покажите этот штрих-код на кассе  </string>
    <string name="vxod">Войти</string>
    <string name="forgetPassword">Забыли пароль?</string>
    <string name="registratsiya">Зарегистрироваться</string>
    <string name="parol">Пароль</string>
    <string name="scanQrCode">"        "Отсканируйте QR-код,\nполученный после сдачи ТБО</string>
    <string name="sendPassword">Выслать пароль</string>
    <string name="sendPasswordAgain">Пароль успешно выслан \n  на указанный Email</string>

    <string name="senAgain2">Выслать пароль еще раз</string>
    <string name="sendAgain3">Пароль успешно выслан еще раз \n на указанный E-mail</string>
    <string name="ok">Ок</string>
    <string name="grant_permission">Получение прав</string>
    <string name="permission_camera">Этому приложению нужна права на камеру для скана QR кода</string>
    <string name="permission_camera_rationale">Access to the camera is needed for detection</string>
    <string name="no_camera_permission">This application cannot run because it does not have the camera permission.  The application will now exit.</string>
    <string name="low_storage_error">Face detector dependencies cannot be downloaded due to low device storage</string>
    <string name="title_activity_main">Barcode Reader Sample</string>
    <string name="barcode_header">Click &quot;Read Barcode&quot; to read a barcode</string>
    <string name="read_barcode">Read Barcode</string>
    <string name="auto_focus">Auto Focus</string>
    <string name="use_flash">Use Flash</string>
    <string name="barcode_success">Barcode read successfully</string>
    <string name="barcode_failure">No barcode captured</string>
    <string name="barcode_error">"Error reading barcode: %1$s"</string>
    <string name="grant">Получить</string>
    <string name="cancel">Отмена</string>
    <string name="scanQrcodeHorizontal">Отсканируйте QR код, \n полученный  \n после сдачи ТБО</string>
    <string name="wrongEmail">Неверно введен E-mail</string>
    <string name="inputPassword2">Введите пароль</string>
    <string name="changePassword">Сменить пароль</string>
    <string name="newPassword">Новый пароль</string>
    <string name="qrinvalid">QR-код недействителен</string>
    <string name="notice">Оповещение</string>
    <string name="inShop">В магазин</string>
    <string name="buyCoupon">Покупка купона</string>
    <string name="buy">Купить</string>
    <string name="next">Далее</string>
    <string name="change_avatar">Сменить аватар</string>
    <string name="license_agree">Лицензионное соглашение</string>


</resources>
