<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/camera"
            android:icon="@drawable/photo_camera"
            android:title="@string/scaner" />
        <item
            android:id="@+id/shop"
            android:icon="@drawable/shopping_bag"
            android:title="@string/shop" />
        <item
            android:id="@+id/achievmentsdrawer"
            android:icon="@drawable/coupon"
            android:title="@string/coupons1" />
        <item
            android:id="@+id/couponsdrawer"
            android:icon="@drawable/star"
            android:title="@string/achievment" />
        <item
            android:id="@+id/settings"
            android:icon="@drawable/settings"
            android:title="@string/settings" />
    </group>

</menu>
