<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="350dp"
    android:layout_height="100dp"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="154dp"
        android:layout_height="40dp"
        android:gravity="bottom"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView17"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:text="@string/notice"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="316dp"
        android:layout_height="wrap_content"

        android:gravity="bottom"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView12"
            android:layout_width="289dp"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:text="@string/qrinvalid"
            android:textColor="@color/md_red_900"
            android:textSize="23sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:gravity="bottom"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView16"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:text="@string/ok"
            android:textColor="#4eaf9c"
            android:textSize="20sp" />
    </LinearLayout>
</LinearLayout>