<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="350dp"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:gravity="bottom"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView17"
            android:layout_width="154dp"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:text="@string/notice"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="bottom"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView21"
            android:layout_width="291dp"
            android:layout_height="39dp"
            android:gravity="right"
            android:text="Вам начислено 400 баллов"
            android:textColor="@color/md_dark_appbar"
            android:textSize="20dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="319dp"
        android:layout_height="55dp"
        android:layout_gravity="right"
        android:gravity="bottom"
        android:orientation="vertical">

        <Button
            android:id="@+id/button5"
            android:layout_width="186dp"
            android:layout_height="40dp"
            android:background="@drawable/greengradient"
            android:text="@string/inShop"

            android:textColor="@color/white" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="64dp"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:gravity="bottom"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView16"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:text="@string/ok"
            android:textColor="@color/blue_png"
            android:textSize="20sp" />
    </LinearLayout>
</LinearLayout>