<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="350dp"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="329dp"
        android:layout_height="wrap_content"
        android:layout_gravity="right"

        android:orientation="vertical">

        <TextView
            android:id="@+id/textView24"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/buyCoupon"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="329dp"
        android:layout_height="83dp"
        android:layout_gravity="right"
        android:gravity="bottom"
        android:orientation="vertical">

        <TextView
            android:id="@+id/info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Скидка на фрукты\nдействительна до 20.09.19"
            android:textColor="@color/md_dark_appbar"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/cost"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="300 баллов"
            android:textColor="@color/md_green_800"
            android:textSize="20sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="329dp"
        android:layout_height="61dp"
        android:layout_gravity="right"
        android:gravity="bottom"
        android:orientation="vertical">

        <Button
            android:id="@+id/button6"
            android:layout_width="186dp"
            android:layout_height="46dp"
            android:background="@drawable/greengradient"
            android:text="@string/buy"
            android:textColor="@color/white" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="88dp"
        android:layout_height="42dp"
        android:layout_gravity="right"
        android:gravity="bottom"

        android:orientation="vertical">

        <TextView
            android:id="@+id/textView23"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ok"
            android:textColor="@color/blue_png"
            android:textSize="20sp" />
    </LinearLayout>
</LinearLayout>