<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.Activities.newNewPasswordActivity"
    android:background="@color/grey_300">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <include
            android:id="@+id/mytoolbar"
            layout="@layout/toolbar" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        android:orientation="vertical">

        <LinearLayout
            android:layout_width="235dp"
            android:layout_height="142dp"
            android:layout_gravity="center"
            android:gravity="bottom"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/newPassword" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="247dp"
            android:layout_height="53dp"
            android:layout_gravity="center"
            android:gravity="bottom"
            android:orientation="vertical">

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="46dp"
                android:background="@color/white"
                android:ems="10"
                android:inputType="textPassword" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="235dp"
            android:layout_height="48dp"
            android:layout_gravity="center"
            android:gravity="bottom"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/repeatPassword" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="247dp"
            android:layout_height="53dp"
            android:layout_gravity="center"
            android:gravity="bottom"
            android:orientation="vertical">

            <EditText
                android:id="@+id/repeatPassword"
                android:layout_width="match_parent"
                android:layout_height="46dp"
                android:background="@color/white"
                android:ems="10"
                android:inputType="textPassword" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="87dp"
            android:layout_gravity="center"
            android:gravity="bottom"
            android:orientation="vertical">

            <Button
                android:id="@+id/button4"
                android:layout_width="247dp"
                android:layout_height="40dp"
                android:background="@drawable/greengradient"
                android:text="@string/changePassword"
                android:textColor="@color/white" />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>
